// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewsPage should match the snapshot 1`] = `
<LinearGradient
  colors={
    Array [
      "#F0CB35",
      "#D56C2C",
      "#C02425",
    ]
  }
  style={
    Object {
      "height": 1334,
    }
  }
>
  <View
    style={
      Object {
        "flex": 9,
      }
    }
  >
    <ScrollViewMock>
      <ReviewCard
        key="9"
        taco={
          Object {
            "average_rating": 5,
            "id": 9,
            "restaurant_id": 2,
            "reviews": Array [
              Object {
                "id": 1,
                "rating": 7,
                "review": "its ok",
                "taco": 9,
              },
              Object {
                "id": 2,
                "rating": 4,
                "review": "lame",
                "taco": 9,
              },
              Object {
                "id": 3,
                "rating": 4,
                "review": null,
                "taco": 9,
              },
              Object {
                "id": 4,
                "rating": 1,
                "review": "This taco put my son in the hospital",
                "taco": 9,
              },
              Object {
                "id": 5,
                "rating": 10,
                "review": "The best",
                "taco": 9,
              },
              Object {
                "id": 6,
                "rating": 4,
                "review": "meh",
                "taco": 9,
              },
            ],
            "type": "Testing testing",
          }
        }
      />
    </ScrollViewMock>
  </View>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00BFFF",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 32,
          }
        }
      >
        Add Review
      </Text>
    </TouchableOpacity>
  </KeyboardAvoidingView>
</LinearGradient>
`;

exports[`ReviewsPage should match the snapshot 2`] = `
<LinearGradient
  colors={
    Array [
      "#F0CB35",
      "#D56C2C",
      "#C02425",
    ]
  }
  style={
    Object {
      "height": 1334,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <ScrollViewMock>
      <ReviewCard
        key="9"
        taco={
          Object {
            "average_rating": 5,
            "id": 9,
            "restaurant_id": 2,
            "reviews": Array [
              Object {
                "id": 1,
                "rating": 7,
                "review": "its ok",
                "taco": 9,
              },
              Object {
                "id": 2,
                "rating": 4,
                "review": "lame",
                "taco": 9,
              },
              Object {
                "id": 3,
                "rating": 4,
                "review": null,
                "taco": 9,
              },
              Object {
                "id": 4,
                "rating": 1,
                "review": "This taco put my son in the hospital",
                "taco": 9,
              },
              Object {
                "id": 5,
                "rating": 10,
                "review": "The best",
                "taco": 9,
              },
              Object {
                "id": 6,
                "rating": 4,
                "review": "meh",
                "taco": 9,
              },
            ],
            "type": "Testing testing",
          }
        }
      />
    </ScrollViewMock>
  </View>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <AddReviewForm
      tacos={
        Array [
          Object {
            "average_rating": 5,
            "id": 9,
            "restaurant_id": 2,
            "reviews": Array [
              Object {
                "id": 1,
                "rating": 7,
                "review": "its ok",
                "taco": 9,
              },
              Object {
                "id": 2,
                "rating": 4,
                "review": "lame",
                "taco": 9,
              },
              Object {
                "id": 3,
                "rating": 4,
                "review": null,
                "taco": 9,
              },
              Object {
                "id": 4,
                "rating": 1,
                "review": "This taco put my son in the hospital",
                "taco": 9,
              },
              Object {
                "id": 5,
                "rating": 10,
                "review": "The best",
                "taco": 9,
              },
              Object {
                "id": 6,
                "rating": 4,
                "review": "meh",
                "taco": 9,
              },
            ],
            "type": "Testing testing",
          },
        ]
      }
      toggleReviewForm={[Function]}
    />
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00BFFF",
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 32,
          }
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
  </KeyboardAvoidingView>
</LinearGradient>
`;
